--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,4 +1,16 @@
 html {
     min-width: 100%;
     scroll-behavior: smooth;
+    font-size: 1rem;
+}
+
+@media only screen and (max-width: 600px) {
+    html {
+        font-size: .5rem;
+    }
+}
+@media only screen and (max-width: 760px) {
+    html {
+        font-size: .7rem;
+    }
 }
